--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,6 +40,9 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
   <div id="root"></div>
   <!--
       This HTML file is a template.
